스프링데이터Common 커스템 리포지토리 강의

--- a/1. 스프링데이터Common 커스템 리포지토리.md
+++ b/1. 스프링데이터Common 커스템 리포지토리.md
@@ -1,5 +1,5 @@
 
-쿼리 메소드(쿼리 생성과 쿼리 찾아쓰기)로 해결이 되지 않는 경우 직접 코딩으로 구현 가능.
+## 쿼리 메소드(쿼리 생성과 쿼리 찾아쓰기)로 해결이 되지 않는 경우 직접 코딩으로 구현 가능.
 - 스프링 데이터 리포지토리 인터페이스에 기능 추가.
 - 스프링 데이터 리포지토리의 기본 기능 덮어쓰기 가능.
 - 구현 방법
@@ -7,14 +7,14 @@
   2. 인터페이스 구현 클래스 만들기(기본 접미어는 Impl)
   3. 엔티티 리포지토리에 커스텀 리포지토리 인터페이스 추가.
 
-기능 추가하기.
-기본 기능 덮어쓰기.
-접미어 설정하기.
+### 기능 추가하기.
+### 기본 기능 덮어쓰기.
+### 접미어 설정하기.
 
-모든 리포지토리에 공통적으로 추가하고 싶은 기능이 있거나 덮어쓰고 싶은 기능이 있다면?
+## 모든 리포지토리에 공통적으로 추가하고 싶은 기능이 있거나 덮어쓰고 싶은 기능이 있다면?
 1. JpaRepository를 상속 받는 인터페이스 정의
    - @NoRepositoryBean
-2. 기본 구현테를 상속받는 커스텀 구현체 만들기.
+2. 기본 구현체를 상속받는 커스텀 구현체 만들기.
 3. @EnableJpaRepositories에 설정
    - repositoryBaseClass
 
